doc mostly finished
